tests/snapshots/regression/collections__trailing_commas_everywhere.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/trailing_commas_everywhere.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 2 errors, 1 note • tests/fixtures/collections/trailing_commas_everywhere.flx
error[E430]: Any Type Inferred

Core definition `0` has an unresolved type variable (var #10599) in its HM-inferred result type at the backend representation. The static typing contract requires every Core-visible boundary to be concrete before backend lowering.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^^^^^^^^

Hint:
  Add a type annotation or adjust the definition so inference fully resolves its result type.


error[E004]: Undefined Variable

I can't find a value named `f`.

  tests/fixtures/collections/trailing_commas_everywhere.flx:2:1
  |
2 | f(1,2,);
  | ^

Hint:
  Define it first: let f = ...;

Help:
  Did you mean one of: `Flow.Math.pi`, `Flow.List.all`, `Flow.List.any`?


Note: Downstream Errors Suppressed

I hid 2 later-stage diagnostics (2 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 2 errors.
